--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,5 +20,5 @@ push_github:
     script:
         - wget -q https://gitlab.com/ludeeus/toolbox/raw/master/CI-Scripts/push_to_public_repo/init.sh
         - wget -q https://gitlab.com/ludeeus/toolbox/raw/master/CI-Scripts/push_to_public_repo/push.sh
-        - bash init.sh github pip-packages
+        - bash init.sh github pip-packages "" /pydockermon
         - bash push.sh Europe/Oslo pydockermon
